--- a/BinMaps.JS/index.html
+++ b/BinMaps.JS/index.html
@@ -6,7 +6,7 @@
     <title>BinMaps - Smart Waste Management System</title>
     <link rel="stylesheet" href="BinMaps-style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-</head>
+    <link rel="stylesheet" href="styles/styles.css">
 <body>
     <!-- =====================
      HOME PAGE (NEW)
@@ -21,12 +21,7 @@
             <h1>Smart Waste Management<br>for Modern Cities</h1>
             <p>AI-powered waste collection optimization that saves costs, reduces emissions, and keeps cities cleaner</p>
             
-            <div class="home-buttons">
-                <button class="home-btn home-btn-primary" id="homeLoginBtn">
-                    <span>Sign In</span>
-                    <span>→</span>
-                </button>
-            </div>
+            
 
             <div class="home-stats">
                 <div class="home-stat-item">
