--- a/BinMaps.JS/index.html
+++ b/BinMaps.JS/index.html
@@ -846,12 +846,15 @@
                         required>
                     <small>Or click on the map to select location</small>
                 </div>
-
+<script> window.chtlConfig = { chatbotId: "4757926567" } </script>
+                <script async data-id="4757926567" id="chtl-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
                 <div class="form-group">
                     <label>Description</label>
                     <textarea class="form-textarea" id="reportDescription" rows="4"
                         placeholder="Describe the problem in detail..." required></textarea>
                 </div>
+
+                
 
                 <button type="submit" class="submit-btn">
                     <span>Submit Report</span>
