--- a/BinMaps.JS/index.html
+++ b/BinMaps.JS/index.html
@@ -822,7 +822,7 @@
         </div>
 
         <!-- FLOATING REPORT BUTTON (SHOWN FOR USER ROLE) -->
-        <button class="floating-report-btn" id="floatingReportBtn" style="display: none;">
+        <button class="floating-report-btn" id="floatingReportBtn">
             <span class="report-icon">📢</span>
             <span class="report-text">Report Issue</span>
         </button>
